Fixed the position of the elements in the toolbar, now all edition buttons appear aligned at the same point

--- a/stylesheets/all/editor.css
+++ b/stylesheets/all/editor.css
@@ -3991,12 +3991,6 @@ background-color: #326999;
 
 /* Element Settings */
 
-
-#toolbar_settings_wrapper {
-	vertical-align: top;
-	margin-top: 7px;
-}
-
 .elSettings_fancybox {
 	padding: 20px;
 }
